--- a/src/main/resources/templates/admin/nurse/approve.html
+++ b/src/main/resources/templates/admin/nurse/approve.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <head>
-    <title>의사 목록</title>
+    <title>간호사 승인</title>
 </head>
+
 <body>
 <!-- Top -->
 <nav th:replace="fragments/bodyTop :: bodyTop" />
@@ -14,16 +15,17 @@
             <div class="row flex-nowrap">
                 <!--sidebar-->
                 <div th:replace="fragments/admin/sidebar :: sidebar" />
+
                 <!--Add Table-->
                 <div class="col py-3 container">
-                    <h2 class="text-center fw-bold mb-2">의사 조회</h2>
+                    <h2 class="text-center fw-bold mb-2">간호사 승인</h2>
 
                     <!--검색 form-->
                     <div class="d-flex justify-content-start">
                         <div class="mb-4 col-lg-3">
-                            <form class="" method="get">
+                            <form class="" method="post">
                                 <div class="input-group form-floting">
-                                    <input th:field="${form.name}" type="text" id="searchPatientInfo" class="form-control" placeholder="의사 검색"/>
+                                    <input th:field="${form.name}" type="text" id="searchPatientInfo" class="form-control" placeholder="간호사 검색"/>
                                     <button class="btn btn-outline-primary" type="submit">검색</button>
                                 </div>
                             </form>
@@ -34,29 +36,20 @@
                     <table class="table table-bordered table-hover" id = "patientDetail">
                         <thead class = "table-dark">
                             <tr>
-                                <th scope="col" style="width: 200px;">의사 면허 번호</th>
-                                <th scope="col">이름</th>
-                                <th scope="col">성별</th>
-                                <th scope="col">전화번호</th>
+                                <th scope="col" style="width: 200px;">간호사 면허 번호</th>
+                                <th scope="col" style="width: 200px;">이름</th>
                                 <th scope="col">진료과</th>
-                                <th scope="col">직급</th>
-                                <th scope="col">수정 및 삭제</th>
+                                <th scope="col" style="width: 150px;">승인</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class = "accordion-toggle" data-bs-toggle = "collapse" data-bs-target="#doctorPatientDetail1"
-                            th:each="doctor:${doctors}">
-                                <td th:text="${doctor.licenseCode}">의사 면허 번호</td>
-                                <td th:text="${doctor.info.name}">이름</td>
-                                <td th:text="${doctor.info.sex.description}">성별</td>
-                                <td th:text="${doctor.info.phoneNumber}">연락처</td>
-                                <td th:text="${doctor.major.description}">전공</td>
-                                <td th:text="${doctor.rank.description}">직책</td>
+                            <tr th:each="nurse:${nurses}" class = "accordion-toggle" data-bs-toggle = "collapse" data-bs-target="#doctorPatientDetail1">
+                                <td th:text="${nurse.licenseCode}">면허번호</td>
+                                <td th:text="${nurse.info.name}">이름</td>
+                                <td th:text="${nurse.major.description}">전공</td>
                                 <td>
-                                    <button class="btn btn-warning btn-sm" type = "button"
-                                            th:onclick="|location.href='@{/admin/doctor/list/{doctorId}/edit (doctorId=${doctor.getId()})}'|">수정</button>
-                                    <button class="btn btn-danger btn-sm" type= "button"
-                                            th:onclick="|location.href='@{/admin/doctor/list/{doctorId}/delete (doctorId=${doctor.getId()})}'|">삭제</button>
+                                    <button class="btn btn-primary btn-sm" type= "button"
+                                            th:onclick="|location.href='@{/admin/nurse/approve/{nurseId} (nurseId=${nurse.getId()})}'|">승인</button>
                                 </td>
                             </tr>   
                         </tbody>
@@ -91,13 +84,26 @@
                             </ul>
                         </nav>
                     </div>
+
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
 
-<!-- Footer-->
-<div th:replace="fragments/footer :: footer"/>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container px-5">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
+            <hr>
+            <p class="m-0 text-center text-white">서울특별시 광진구 능동로 206 세종대학교 대양 AI센터</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    <!--Ohter JS-->
+    <script src="/pagiNation.js"></script>
 </body>
 
 </html>
