--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a th:href="@{/home2}">
+                <a th:href="@{/staff}">
                     <span>
                        직원<br>&nbsp;의료진
                     </span>
