--- a/src/main/resources/templates/staffHome.html
+++ b/src/main/resources/templates/staffHome.html
@@ -16,7 +16,7 @@
         <!--환자 직원 토글-->
         <ul class="user-type-nav">
             <li>
-                <a href="index.html">
+                <a th:href="@{/}">
                     <span>
                         환자<br>&nbsp;보호자
                     </span>
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li class="on">
-                <a href="home2.html">
+                <a th:href="@{/staff}">
                     <span>
                         직원<br>&nbsp;의료진
                     </span>
