--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -3,111 +3,141 @@
 <head th:replace="fragments/header :: header" />
 <head>
     <title>세종대병원</title>
+    <link th:href="@{/css/hospital.css}" rel = "stylesheet" />
+    <link th:href="@{/css/common.css}" rel = "stylesheet" />
+    <link th:href="@{/css/cms.css}" rel="stylesheet" />
 </head>
-<body class="">
+
+<body class = "">
+<!--top bar-->
 <!--top bar-->
 <nav th:replace="fragments/bodyTop :: bodyTop" />
 
-    <!-- Header-->
-    <header class="bg-dark py-5">
-        <div class="container px-5">
-            <div class="row gx-5 align-items-start">
-                <div class="col-sm-5 col-md-6">
-                    <div class="text-center my-5">
-                        <h2 class="display-5 fw-bolder text-white mb-2">
-                            <br>Welcome to<br>ESL-병원시스템
-                        </h2>
-                        <p class="lead text-white-50 mb-4">capstone-ESL</p>
-                    </div>
-                </div>
-                <div class="col-sm-5 col-md-6">
-                    <div class="text-center my-5">
-                        <h1 class="display-5 fw-bolder text-white mb-2 ">
-                            <img src="assets/images/undraw_doctors_hwty.svg" width="500">
-                        </h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!--캐러셀-->
-    <section>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                    <div class="container px-5 my-5">
-                        <div class="row gx-5">
-
-                            <!--의료진 찾기-->
-                            <span class="col-lg-1"></span>
-                            <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/doctorSearch}'|">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-person"></i>
-                                </div>
-                                <h2 class="h4 fw-bolder">의료진 찾기</h2>
-                                <p>전문 의료진을 빠르게 찾을 수 있습니다.</p>
-                            </div>
-
-                            <!--진료과 찾기-->
-                            <span class="col-lg-1"></span>
-                            <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/departmentSearch}'|">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-person"></i>
-                                </div>
-                                <h2 class="h4 fw-bolder">진료과 찾기</h2>
-                                <p>진료 전 진료과를 안내해드립니다.</p>
-                            </div>
-
-                            <!--진료 예약-->
-                            <span class="col-lg-1"></span>
-                            <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/createAppointment}'|">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-person"></i>
-                                </div>
-                                <h2 class="h4 fw-bolder">진료 예약</h2>
-                                <p>회원은 편리하게 예약이 가능합니다.</p>
-                            </div>
-
+    <article>
+        <!--환자 직원 토글-->
+        <ul class="user-type-nav">
+            <li class="on">
+                <a th:href="@{/}">
+                    <span>
+                        환자<br>&nbsp;보호자
+                    </span>
+                    <i class="ico ico-patient-carer-white"></i>
+                </a>
+            </li>
+            <li>
+                <a th:href="@{/staff}">
+                    <span>
+                       직원<br>&nbsp;의료진
+                    </span>
+                    <i class="ico ico-expert-white"></i>
+                </a>
+            </li>
+        </ul>
+        <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-start">
+                    <div class="col-sm-5 col-md-6">
+                        <div class="text-center my-5">
+                            <h2 class="display-5 fw-bolder text-white mb-2">
+                                <br>Welcome to<br>ESL-병원시스템
+                            </h2>
+                            <p class="lead text-white-50 mb-4">capstone-ESL</p>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <div class="container px-5 my-5">
-                        <div class="row gx-5">
-
-                            <!--예약 현황-->
-                            <span class="col-lg-1"></span>
-                            <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/appointmentList}'|">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                        class="bi bi-person"></i>
-                                </div>
-                                <h2 class="h4 fw-bolder">예약 현황</h2>
-                                <p>회원 예약 내역을 확인할 수 있습니다.</p><br/>
-                            </div>
-
+                    <div class="col-sm-5 col-md-6">
+                        <div class="text-center my-5">
+                            <h1 class="display-5 fw-bolder text-white mb-2 ">
+                                <img src="assets/images/undraw_doctors_hwty.svg" width="500">
+                            </h1>
                         </div>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
+        </header>
+    
+        <!--캐러셀-->
+        <section>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <div class="container px-5 my-5">
+                            <div class="row gx-5">
+    
+                                <!--의료진 찾기-->
+                                <span class="col-lg-1"></span>
+                                <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/doctorSearch}'|">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                            class="bi bi-person"></i>
+                                    </div>
+                                    <h2 class="h4 fw-bolder">의료진 찾기</h2>
+                                    <p>전문 의료진을 빠르게 찾을 수 있습니다.</p>
+                                </div>
+    
+                                <!--진료과 찾기-->
+                                <span class="col-lg-1"></span>
+                                <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/departmentSearch}'|">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                            class="bi bi-person"></i>
+                                    </div>
+                                    <h2 class="h4 fw-bolder">진료과 찾기</h2>
+                                    <p>진료 전 진료과를 안내해드립니다.</p>
+                                </div>
+    
+                                <!--진료 예약-->
+                                <span class="col-lg-1"></span>
+                                <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/createAppointment}'|">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                            class="bi bi-person"></i>
+                                    </div>
+                                    <h2 class="h4 fw-bolder">진료 예약</h2>
+                                    <p>회원은 편리하게 예약이 가능합니다.</p>
+                                </div>
+    
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <div class="container px-5 my-5">
+                            <div class="row gx-5">
+    
+                                <!--예약 현황-->
+                                <span class="col-lg-1"></span>
+                                <div class="col-lg-3 mb-5 mb-lg-0" th:onclick="|location.href='@{/patient/appointmentList}'|">
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
+                                            class="bi bi-person"></i>
+                                    </div>
+                                    <h2 class="h4 fw-bolder">예약 현황</h2>
+                                    <p>회원 예약 내역을 확인할 수 있습니다.</p><br/>
+                                </div>
+    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </article>
+
+    <!-- Features section--> 
+    <!--아직 미완성된 직원 페이지. -> 후에 분할-->
+    <!---->
 
 <!-- Footer-->
 <div th:replace="fragments/footer :: footer"/>
