--- a/src/main/resources/templates/patient/doctorSearch.html
+++ b/src/main/resources/templates/patient/doctorSearch.html
@@ -59,7 +59,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title" th:text="${doctor.info.name}">이름</h5>
                                         <p class="card-text" th:text="${doctor.major.description}">전공</p>
-                                        <a href="#" th:href="@{/patient/apppointment/{doctorId} (doctorId=${doctor.getId()})}" class="btn btn-primary">예약하기</a>
+                                        <a href="#" th:href="@{/patient/appointment/{doctorId} (doctorId=${doctor.getId()})}" class="btn btn-primary">예약하기</a>
                                     </div>
                                 </div>
                             </div>
