--- a/src/main/resources/templates/fragments/bodyTop.html
+++ b/src/main/resources/templates/fragments/bodyTop.html
@@ -20,7 +20,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link"
                                         th:text="|${loginMember.info.name}님 환영합니다|"
-                                        th:onclick="|location.href='@{/myPage}'|"
+                                        th:onclick="|location.href='@{/mypage}'|"
                                         style=" font-size:1.0em; width:auto; height:39px">사용자 이름</a></li>
                 <li class="nav-item"><a class="nav-link"
                                         th:onclick="|location.href='@{/logout}'|"
