--- a/src/main/resources/templates/join/doctor/phoneCheck.html
+++ b/src/main/resources/templates/join/doctor/phoneCheck.html
@@ -3,6 +3,7 @@
 <head th:replace="fragments/header :: header" />
 <head>
     <title>회원가입</title>
+    <link rel = "stylesheet" th:href="@{/css/test.css}">
     <!-- error -->
     <style>
         .field-error {
