--- a/src/main/resources/templates/join/patient/userJoinPatient.html
+++ b/src/main/resources/templates/join/patient/userJoinPatient.html
@@ -3,6 +3,7 @@
 <head th:replace="fragments/header :: header" />
 <head>
     <title>회원가입</title>
+    <link rel = "stylesheet" th:href="@{/css/test.css}">
     <!--우편번호 api-->
     <script th:src="@{//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js}"></script>
     <script type="text/javascript" th:src="@{/js/address_number.js}"></script>
