--- a/src/main/resources/templates/mypage/delete.html
+++ b/src/main/resources/templates/mypage/delete.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
 <head>
-    <title>회원 탈퇴</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>마이페이지| 비밀번호 변경</title>
+    <!-- Favicon-->
+    <link th:href="@{../../assets/images/favicon.ico}" rel="shortcut icon" type="image/x-icon">
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Bootstrap CSS file-->
+    <link th:href="@{../assets/css/styles.css}" rel="stylesheet"/>
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <!--Ohter CSS-->
+    <link rel = "stylesheet" th:href="@{/css/tableCollapse.css}">
+
 </head>
 <body class = "">
 <!-- Top -->
@@ -12,15 +29,15 @@
     <section>
         <div class="container">
             <div class="row mb-4 mt-4">
-                <h1 class="text-center fw-bold">회원탈퇴</h1>
+                <h1 class="text-center fw-bold">마이 페이지</h1>
             </div>
             <div class="row justify-content-start">
                 <span class="col-lg-1"></span>
                 <div class="col-lg-2">
                     <div class="list-group">
-                        <a th:href="@{/myPage}" class="list-group-item list-group-item-action">개인 정보 수정</a>
-                        <a th:href="@{/myPage/changePw}" class="list-group-item list-group-item-action">비밀번호 변경</a>
-                        <a th:href="@{/myPage/delete}" class="list-group-item list-group-item-action active">회원 탈퇴</a>
+                        <a th:href="@{/mypage}" class="list-group-item list-group-item-action">개인 정보 수정</a>
+                        <a th:href="@{/mypage/changePw}" class="list-group-item list-group-item-action">비밀번호 변경</a>
+                        <a th:href="@{/mypage/delete}" class="list-group-item list-group-item-action active">회원 탈퇴</a>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
@@ -30,31 +47,36 @@
                             <hr>
                             <form method="post" th:action>
 
-                                <div class="table table-write">
-                                    <table>
-                                        <caption class="sr-only">회원 정보표이며 성명, 아이디, 현재 비밀번호 정보 제공</caption>
-                                        <colgroup>
-                                            <col style="width: 150px;">
-                                            <col>
-                                        </colgroup>
-                                        <tbody>
+                                <!--마이페이지 수정 테이블-->
+                                <table class="table table-bordered">
+                                    <thead></thead>
+                                    <tbody>
+                                        <!--참고 vertical-align: middle 상하중앙정렬 height 표 폭 조절-->
                                         <tr>
-                                            <th scope="row" class="text-left" style="background-color: #f9f9f9">성명</th>
-                                            <td th:text="|${loginMember.info.name} (${loginMember.info.rrn.substring(0, 6)} ${loginMember.info.sex.description})|">이름 (생년월일 성별)</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="text-left" style="background-color: #f9f9f9">아이디</th>
-                                            <td th:text="${loginMember.loginId}">아이디</td>
-                                        </tr>
-                                        <tr>
-                                            <th scope="row" class="text-left" style="background-color: #f9f9f9"><label for="inputPW">현재 비밀번호</label></th>
-                                            <td><input type="password" th:field="${form.password}" autocomplete="off" id="curPw" class="form-control" style="width: 355px" maxlength="20">
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">성명</td>
+                                            <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;"
+                                            th:text="|${loginMember.info.name} (${loginMember.info.rrn.substring(0, 6)} ${loginMember.info.sex.description})|">
+                                                sdd1234
                                             </td>
                                         </tr>
-
-                                        </tbody>
-                                    </table>
-                                </div>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">아이디</td>
+                                            <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;"
+                                                th:text="${loginMember.loginId}">
+                                                아이디
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">현재 비밀번호</td>
+                                            <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;">
+                                                <input th:field="${form.password}" type = "password" class="form-control" id = "pwd" style="width: 200px;"/>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                    <!--하단에 굵은 줄-->
+                                    <tfoot><td style="padding:0%"></td></tfoot>          
+                                </table>
+                                <!--테이블 end-->
 
                                 <div class="text-center mb-4">
                                     <button class="btn btn-lg btn-primary btn-block text-uppercase"
@@ -71,15 +93,15 @@
                                         </div>
                                         <div class="modal-body text-center">
                                           정말 회원 탈퇴를 하시겠습니까? <br>
-                                          회원 탈퇴를 진행하시면, 저장되어있던 모든 데이터가 폐기됩니다.
+                                            탈퇴 후에는 신상정보가 모두 삭제되며, 등록하신 데이터를 다시 확인하실 수 없습니다.
                                         </div>
 
                                         <!--회원 탈퇴 진행 버튼-->
                                         <div class="modal-footer">
                                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="location.href ='userWithdraw.html'">돌아가기</button>
-                                          <button type="submit" class="btn btn-primary" onclick="">확인</button>
+                                          <button type="button" class="btn btn-primary" onclick="">확인</button>
                                         </div>
-
+                                        
                                       </div>
                                     </div>
                                   </div>
@@ -91,17 +113,8 @@
         </div>
     </section>
 
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-            <hr>
-            <p class="m-0 text-center text-white">서울특별시 광진구 능동로 206 세종대학교 대양 AI센터</p>
-        </div>
-    </footer>
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Footer-->
+<div th:replace="fragments/footer :: footer"/>
 </body>
 
 </html>
