--- a/src/main/resources/templates/mypage/updateInfo.html
+++ b/src/main/resources/templates/mypage/updateInfo.html
@@ -3,6 +3,8 @@
 <head th:replace="fragments/header :: header" />
 <head>
     <title>개인정보수정</title>
+    <script th:src="@{//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js}"></script>
+    <script type="text/javascript" th:src="@{/js/address_number.js}"></script>
 </head>
 <body class = "">
 <!-- Top -->
@@ -18,80 +20,81 @@
                 <span class="col-lg-1"></span>
                 <div class="col-lg-2">
                     <div class="list-group">
-                        <a th:href="@{/myPage}" class="list-group-item list-group-item-action active">개인 정보 수정</a>
-                        <a th:href="@{/myPage/changePw}" class="list-group-item list-group-item-action">비밀번호 변경</a>
-                        <a th:href="@{/myPage/delete}" class="list-group-item list-group-item-action">회원 탈퇴</a>
+                        <a th:href="@{/mypage}" class="list-group-item list-group-item-action active">개인 정보 수정</a>
+                        <a th:href="@{/mypage/changePw}" class="list-group-item list-group-item-action">비밀번호 변경</a>
+                        <a th:href="@{/mypage/delete}" class="list-group-item list-group-item-action">회원 탈퇴</a>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-4">
+                <div class="col-lg-7 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title text-center fw-bold">개인 정보 수정</h3>
                             <hr>
-                            <form method="post">
-                                <div class="mb-4">
-                                    <label class="form-label" for="id">아이디</label>
-                                    <div class = "input-group">
-                                        <input type="text" id="id" class="form-control" pattern="^[A-za-z0-9]{4,12}$"
-                                            aria-describedby="addon1" required>
-                                        <button class="btn btn-outline-primary" type = "button" id = "addon1">중복 확인</button>
-                                    </div>
-                                </div>
+                            <form method="post" th:action th:object="${form}">
 
-                                <div class="mb-4">
-                                    <label class="form-label" for="name">이름</label>
-                                    <input type="text" id="name" class="form-control" required>
-                                </div>
-
-                                <div class="row">
-                                    <label class="form-label" for="human-number-first">주민등록번호</label>
-
-                                    <div class="col-md-6">
-                                        <input type="text" id="human-number-first" class="form-control"
-                                            placeholder="생년월일 YYMMDD"
-                                            pattern="^(?:[0-9]{2}(?:0[1-9]|1[0-2])(?:0[1-9]|[1,2][0-9]|3[0,1])$"
-                                         required>
-                                    </div>
-
-                                    <div class="col-md-6 mb-4">
-                                        <input type="password" id="human-number-last" class="form-control"
-                                            placeholder="주민번호 뒷 7자리" pattern="[1-4]\d{6}$" required>
-                                    </div>
-                                </div>
-
-                                <div class="mb-4">
-                                    <label class="form-label" for="phone-number">전화 번호</label>
-                                    <input type="text" id="phone-number" class="form-control"
-                                        placeholder="010-XXXX-XXXX" pattern="(010)-\d{4}-\d{4}$" required>
-                                </div>
-
-                                <div class="mb-4">
-                                    <label class="form-label" for="E-mail">이메일</label>
-                                    <input type="text" id="E-mail" class="form-control" placeholder="Sejong@Example.com"
-                                        pattern="^[0-9a-zA-Z]([-_\.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_\.]?[0-9a-zA-Z])*\.[a-zA-Z]{2,3}$"
-                                     required>
-                                </div>
-
-                                <div class="row">
-                                    <label class="form-label" for="post-number">우편번호</label>
-
-                                    <div class="input-group mb-4 col-md-6">
-                                        <input type="text" id="post-number" class="form-control" placeholder="05006"
-                                            aria-describedby="addonPost" required readonly>
-                                        <button class="btn btn-outline-primary" type = "button" id = "addonPost" onclick="postcode()">우편번호검색</button>
-                                    </div>
-                                </div>
-
-                                <div class="mb-4">
-                                    <label class="form-label" for="address">주소</label>
-                                    <input type="text" id="address" class="form-control" placeholder="ex) 서울특별시 광진구 능동로"
-                                     required readonly>
-                                </div>
-
-                                <div class="mb-4">
-                                    <label class="form-label" for="detail-address">상세주소</label>
-                                    <input type="text" id="detail-address" class="form-control" required>
-                                </div>
+                                <!--마이페이지 수정 테이블-->
+                                <table class="table table-bordered">
+                                    <thead></thead>
+                                    <tbody>
+                                        <!--참고 vertical-align: middle 상하중앙정렬 height 표 폭 조절-->
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">아이디</td>
+                                            <td style="width: 530px; height: 60px; vertical-align: middle; padding: 2%;"
+                                                th:text="${loginMember.loginId}">
+                                                아이디
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">이름</td>
+                                            <td style="width: 530px; height: 60px; vertical-align: middle; padding: 2%;"
+                                                th:text="${loginMember.info.name}">
+                                                이름
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">생년월일</td>
+                                            <td style="width: 530px; height: 60px; vertical-align: middle; padding: 2%;"
+                                                th:text="|${loginMember.info.rrn.substring(0, 6)}|">
+                                                생년월일
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">전화번호</td>
+                                            <td style="width: 530px; height: 60px; vertical-align: middle; padding: 2%;">
+                                                <input type="tel" id="phone-number" class="form-control"
+                                                placeholder="010-XXXX-XXXX" style="width: 250px;" required>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">우편번호</td>
+                                            <td style="width: 530px; height: 60px; vertical-align: middle; padding: 2%;">
+                                                <div class="row">
+                                                    <div class="input-group" style="width: 250px;">
+                                                        <input type="text" id="post-number" class="form-control" placeholder="05006"
+                                                            aria-describedby="addonPost" required readonly>
+                                                        <button class="btn btn-outline-primary" type = "button" id = "addonPost" onclick="postcode()">우편번호검색</button>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="table-light fw-bold" style="vertical-align: middle;">주소</td>
+                                            <td style="width: 530px; height: 60px; vertical-align: middle; padding: 2%;">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <input type="text" id="address" class="form-control" placeholder="ex) 서울특별시 광진구 능동로" required readonly>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <input type="text" id="detail-address" class="form-control" placeholder="상세 주소" />
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                    <!--하단에 굵은 줄-->
+                                    <tfoot><td style="padding:0%"></td></tfoot>          
+                                </table>
+                                <!--테이블 end-->
 
                                 <div class="text-center mb-4">
                                     <button class="btn btn-lg btn-primary btn-block text-uppercase"
