--- a/src/main/resources/templates/staffHome.html
+++ b/src/main/resources/templates/staffHome.html
@@ -57,65 +57,51 @@
         </header>
     
         <!--캐러셀-->
-        <section>
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <div class="container px-5 my-5">
-                            <div class="row gx-5">
-    
-                                <!--간호사 part-->
-                                <span class="col-lg-1"></span>
-                                <div class="col-lg-3 mb-5 mb-lg-0"
-                                    onclick="location.href = 'nursePart/nurseManagement.html'">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                            class="bi bi-person"></i>
-                                    </div>
-                                    <h2 class="h4 fw-bolder">간호사 Part</h2>
-                                    <p>부가 설명 칸입니다.</p>
-                                </div>
-    
-                                <!--의사 part-->
-                                <span class="col-lg-1"></span>
-                                <div class="col-lg-3 mb-5 mb-lg-0"
-                                    onclick="location.href = 'doctorPart/doctorManagement.html'">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                            class="bi bi-person"></i>
-                                    </div>
-                                    <h2 class="h4 fw-bolder">의사 Part</h2>
-                                    <p>부가 설명 칸입니다.</p>
-                                </div>
-    
-                                <!--관리자 part-->
-                                <span class="col-lg-1"></span>
-                                <div class="col-lg-3 mb-5 mb-lg-0"
-                                    onclick="location.href = 'adminPart/adminManagement.html'">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i
-                                            class="bi bi-wrench-adjustable"></i></div>
-                                    <h2 class="h4 fw-bolder">관리자 Part</h2>
-                                    <p>관리자의 권한으로만 접근가능합니다.</p>
-                                </div>
-                            </div>
+        <section class="py-3 border-bottom" id="features">
+            <div class="container px-4 my-4">
+                <div class="row gx-5" style="padding-left:80px;padding-right:80px;">
+                    <!--간호사 part-->
+                    <div class="col-lg-4 mb-5 mb-lg-0 hover" th:onclick="|location.href='@{/nurse}'|"
+                         style="padding:20px">
+                        <div style="float: left;width:30%; margin-top: 15px;">
+                            <img th:src="@{assets/images/nurse_icon.png}" width="57" />
+                        </div>
+                        <div style="float: left;width:70%">
+                            <h5 style="font-weight:bold;">간호사 part</h5>
+                            <p>간호사 권한으로만 접근 가능합니다.</p>
+                        </div>
+                    </div>
+
+                    <!--의사 part-->
+                    <div class="col-lg-4 mb-5 mb-lg-0 hover " th:onclick="|location.href='@{/doctor}'|"
+                         style="padding:20px">
+                        <div style="float: left;width:30%; margin-top: 15px;">
+                            <img th:src="@{assets/images/doctor_icon.png}" width="57" />
+                        </div>
+                        <div style="float: left;width:70%">
+                            <h5 style="font-weight:bold;">의사 part</h5>
+                            <p>의사 권한으로만 접근 가능합니다.</p>
+                        </div>
+                    </div>
+                    <!--관리자 part-->
+                    <div class="col-lg-4 mb-5 mb-lg-0 hover" th:onclick="|location.href='@{/admin}'|"
+                         style="padding:20px">
+                        <div style="float: left;width:30%; margin-top: 15px;">
+                            <img th:src="@{assets/images/setting_icon.png}" width="57" />
+                        </div>
+                        <div style="float: left;width:70%">
+                            <h5 style="font-weight:bold;">관리자 part</h5>
+                            <p>관리자 권한으로만 접근 가능합니다.</p>
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
+            <!--마우스 올렸을때 회색되는 효과를 위한 css-->
+            <style>
+                .hover:hover {
+                    background: rgb(230, 230, 230);
+                }
+            </style>
         </section>
     </article>
 
