--- a/src/main/resources/templates/mypage/delete.html
+++ b/src/main/resources/templates/mypage/delete.html
@@ -99,7 +99,7 @@
                                         <!--회원 탈퇴 진행 버튼-->
                                         <div class="modal-footer">
                                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="location.href ='userWithdraw.html'">돌아가기</button>
-                                          <button type="button" class="btn btn-primary" onclick="">확인</button>
+                                          <button type="submit" class="btn btn-primary" >확인</button>
                                         </div>
                                         
                                       </div>
